# leviosasql

./: CMakeLists.txt  README.md  databaseloader.cpp  databaseloader.h  input.cpp  input.h  leviosa.cpp  leviosa.h  main.cpp  multitabcodeeditor.cpp  multitabcodeeditor.h  resources.qrc  sessionlistwidget.cpp  sessionlistwidget.h  sessionmanagercore.cpp  sessionmanagercore.h  sessionmanagerdialog.cpp  sessionmanagerdialog.h  simplecodeeditor.cpp  simplecodeeditor.h  sshcore.cpp  sshcore.h  sshmanager.cpp  sshmanager.h  sshworker.cpp  sshworker.h  syntaxhighlighter.cpp  syntaxhighlighter.h
resources/: sqlite_commands.txt  sqlite_functions.txt  sqlite_keywords.txt
